# ai-human-performance-intelligence-platform

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.data-ingestion  Dockerfile.ml-trainer  README.md  docker-compose.deploy.yml  docker-compose.monolith.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
dashboard/: app.py
data/: sample_data.csv
docs/: generate_assets.py
k8s/: api-deployment.yaml  configmap.yaml  data-ingestion-deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  ml-trainer-deployment.yaml  model-pvc.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  postgres.yaml  secret.yaml
monitoring/: alerts.yml  prometheus.yml
scripts/: capture_dashboard_gif.py  generate_customer_support_assets.py  generate_professional_assets.py  init_data.py  init_data_via_api.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  exception_handlers.py  main.py  middleware.py  schemas.py
src/api/v1/: __init__.py  health.py  routes.py
src/application/use_cases/: __init__.py  ingest.py  predict.py  train.py
src/core/: __init__.py  config.py  logging.py  telemetry.py
src/data_ingestion/: __init__.py  main.py  routes.py  schemas.py
src/domain/: __init__.py  entities.py  exceptions.py
src/domain/ports/: __init__.py  model_registry.py  performance_repository.py  prediction_repository.py  (+1 more)
src/infrastructure/: __init__.py
src/ml_trainer/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_api.py  test_ml.py
(+16 files in other folders)
